samples/_failures_safe/1761340859_ff0a50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ef01eb2.c: In function ‘main’:
./samples/SAFE/__tmp_8ef01eb2.c:147:5: error: expected expression at end of input
  147 |     size_t decompressed_size =
      |     ^~~~~~
./samples/SAFE/__tmp_8ef01eb2.c:147:5: error: expected declaration or statement at end of input
